--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ publish = false
 
 [dependencies]
 axum = "0.8.3"
+metrics = "0.24.2"
+metrics-exporter-prometheus = "0.17.0"
 tokio = { version = "1.44.2", features = ["full"] }
